crates/crucible-cli/tests/snapshots/tui_snapshot_tests__popup_mixed_types.snap
---
source: crates/crucible-cli/tests/tui_snapshot_tests.rs
expression: terminal.backend()
---
"┌Streaming─────────────────────────────────────────────────────────────────────┐"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌Select────────────────────────────────────────────────────────────────────────┐"
"│> [agent] @helper AI Helper                                                   │"
"│[file] README.md workspace                                                    │"
"│[note] note:project/todo.md note                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌Input─────────────────────────────────────────────────────────────────────────┐"
"│[Plan] > @                                                                    │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"Mode: Plan │ Ready                                                              "
