crates/crucible-cli/tests/snapshots/tui_snapshot_tests__popup_selection_second.snap
---
source: crates/crucible-cli/tests/tui_snapshot_tests.rs
expression: terminal.backend()
---
"┌Streaming─────────────────────────────────────────────────────────────────────┐"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌Select────────────────────────────────────────────────────────────────────────┐"
"│[cmd] /help Show help                                                         │"
"│> [cmd] /exit Exit                                                            │"
"│[cmd] /clear Clear screen                                                     │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌Input─────────────────────────────────────────────────────────────────────────┐"
"│[Plan] > /                                                                    │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"Mode: Plan │ Ready                                                              "
