crates/crucible-cli/tests/snapshots/tui_snapshot_tests__send_message_input_cleared.snap
---
source: crates/crucible-cli/tests/tui_snapshot_tests.rs
expression: terminal.backend()
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
" > Hello world                                                                  "
"                                                                                "
"● Thinking...                                                                   "
"                                                                                "
" >                                                                              "
"                                                                                "
"▸ Plan │ Thinking                                                               "
