crates/crucible-cli/tests/snapshots/tui_snapshot_tests__send_message_thinking_status.snap
---
source: crates/crucible-cli/tests/tui_snapshot_tests.rs
expression: terminal.backend()
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
" > What is the project structure?                                               "
"                                                                                "
" ◐ Thinking...                                                                  "
"                                                                                "
"                                                                                "
" >                                                                              "
"                                                                                "
"▸ Act │ ollama/llama3.2 │ Thinking                                              "
