crates/crucible-cli/tests/snapshots/tui_snapshot_tests__streaming_empty.snap
---
source: crates/crucible-cli/tests/tui_snapshot_tests.rs
expression: terminal.backend()
---
"┌Streaming─────────────────────────────────────────────────────────────────────┐"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌Input─────────────────────────────────────────────────────────────────────────┐"
"│[Plan] >                                                                      │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"Mode: Plan │ Ready                                                              "
